--- a/demo2/pom.xml
+++ b/demo2/pom.xml
@@ -30,11 +30,6 @@
 
         <dependency>
             <groupId>cn.itlym</groupId>
-            <artifactId>shoulder-starter-beanmap</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>cn.itlym</groupId>
             <artifactId>shoulder-crypto</artifactId>
         </dependency>
 
@@ -50,19 +45,7 @@
 
         <dependency>
             <groupId>cn.itlym</groupId>
-            <artifactId>shoulder-data-db</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <artifactId>shoulder-starter-mysql</artifactId>
         </dependency>
         <!-- shoulder 继承了 spring boot 的所有特性，引入 spring boot 的jar 一样不需要写版本号 -->
 
