--- a/demo5/src/main/resources/application.properties
+++ b/demo5/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-#\u4FDD\u8BC1\u4E24\u4E2A\u5DE5\u7A0B\u542F\u52A8\u65F6\u4E0D\u5360\u7528\u540C\u4E00\u4E2A\u7AEF\u53E3\u53F7\uFF0C\u670D\u52A1\u6807\u8BC6\u4E0D\u540C
-spring.application.name=demo5
-server.port=80
+#\u4FDD\u8BC1\u4E24\u4E2A\u5DE5\u7A0B\u542F\u52A8\u65F6\u4E0D\u5360\u7528\u540C\u4E00\u4E2A\u7AEF\u53E3\u53F7\uFF0C\u670D\u52A1\u6807\u8BC6\u4E0D\u540C\uFF0C\u9700\u8981\u5C06 test1\u3001test2 \u5206\u522B\u542F\u52A8\u540E\u624D\u80FD\u8FDB\u884C\u6D4B\u8BD5
+#spring.profiles.active=test1
+spring.profiles.active=test2
+
+
 shoulder.application.id=${spring.application.name}
 shoulder.application.errorCodePrefix=0x000a
 shoulder.application.cluster=true
