--- a/demo8/pom.xml
+++ b/demo8/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.example</groupId>
     <artifactId>demo8</artifactId>
 
     <dependencies>
