--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
         <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
         <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
         <license-maven-plugin.version>2.2.0</license-maven-plugin.version>
-        <clirr-maven-plugin.version>2.7</clirr-maven-plugin.version>
+        <clirr-maven-plugin.version>2.8</clirr-maven-plugin.version>
         <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
         <maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
         <gpg.passphrase>${env.GPG_PASSPHRASE}</gpg.passphrase>
@@ -240,7 +240,10 @@
                 </configuration>
             </plugin>
 
+<!--            dependency-mediator-maven-plugin 依赖冲突检查 -->
+
             <!-- 接口兼容性检测，避免发布接口的与之前版本不兼容 clirr:check 检查上个版本 -->
+            <!-- 用来检查版本兼容性 https://www.mojohaus.org/clirr-maven-plugin/ 列出方法的参数类型和返回类型和类字段的删除 -->
             <!--不支持JDK8以上的版本 clirr failed: Invalid byte tag in constant pool: 18-->
             <!--<plugin>
                 <groupId>org.codehaus.mojo</groupId>
