fix demo2 compile batch: univocity

--- a/demo1/src/main/resources/application.properties
+++ b/demo1/src/main/resources/application.properties
@@ -28,3 +28,8 @@ management.endpoints.web.exposure.include=*
 #shoulder.application.cluster=true
 #spring.redis.host=${REDIS_ADDR}
 #spring.redis.password=${REDIS_PWD}
+
+# 2.6 \u4E4B\u540E\u9ED8\u8BA4\u7981\u6B62\u5FAA\u73AF\u5F15\u7528\uFF0C\u82E5\u5F00\u542F\u9700\u8981\u8BBE\u7F6E
+#spring.main.allow-circular-references=true
+# 2.6 \u5904\u7406\u6620\u5C04\u5339\u914D\u7684\u9ED8\u8BA4\u7B56\u7565\u5DF2\u4ECEAntPathMatcher\u66F4\u6539\u4E3APathPatternParser\uFF0C\u7531\u4E8ESwagger\uFF08springfox\u4F9D\u8D56\u4E86parttern\uFF0C\u56E0\u6B64\u4F1ANPE\uFF0C\u5EFA\u8BAE\u6362\u6210springdoc\uFF09
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
