--- a/demo1/pom.xml
+++ b/demo1/pom.xml
@@ -53,7 +53,7 @@
 
         <!-- shoulder 改写的 lombok，额外提供 @SLog -->
         <dependency>
-            <groupId>cn.itlym.shoulder</groupId>
+            <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
