--- a/demo3/pom.xml
+++ b/demo3/pom.xml
@@ -20,7 +20,7 @@
 
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>21</java.version>
     </properties>
 
     <dependencies>
@@ -31,7 +31,7 @@
 
         <!-- shoulder 改写的 lombok，额外提供 @SLog -->
         <dependency>
-            <groupId>cn.itlym.shoulder</groupId>
+            <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
