--- a/.drone.yml
+++ b/.drone.yml
@@ -39,6 +39,11 @@ steps:
       #- sudo export MAVEN_OPTS="-Xmx400m -Xms400m -XX:MaxPermSize=90m"
       # 2C 每个可用 C 2线程；deploy 主要是发布，与网络相关，-T 4 4个线程 -B batch 批量处理 -V Display version information
       # 改成部署前签名，否则不会上传
+      # 发布 release 版本时候更换 version
+      - sed -i 's#-SNAPSHOT</shoulder.version>#</shoulder.version>#g' pom.xml
+      - sed -i 's#-SNAPSHOT</shoulder.version>#</shoulder.version>#g' shoulder-archetype-simple/src/main/resources/archetype-resources/pom.xml
+      - find . -name "pom.xml" | xargs sed -i 's#-SNAPSHOT</version><!-- shoulder-version -->#</shoulder.version>#g'
+      #
       - sed -i 's#<phase>deploy</phase><!-- ACTIVE_WITH_package -->#<phase>package</phase><!-- ACTIVE_WITH_package -->#g' pom.xml
       - sed -i 's#<phase>deploy</phase><!-- ACTIVE_WITH_package -->#<phase>package</phase><!-- ACTIVE_WITH_package -->#g' shoulder-parent/pom.xml
       - sed -i 's#<phase>deploy</phase><!-- ACTIVE_WITH_verify -->#<phase>verify</phase><!-- ACTIVE_WITH_verify -->#g' pom.xml
