1. jdk：11 -> 17 2. AppContext: Object must be Serializable to Serialize and copy, avoid SerializeException. 3. imporve doc/log 4. javax -> jakarta(部分命名空间未改变 https://www.agilejava.eu/2021/01/22/migration-guide/) 5. 暂时移除仍然使用 javax 的依赖： com.google.code.findbugs、springfox，直到其更新为 jakarta （同spring） 6. 适配 Spring Security 5.7+ 改动（移除WebSecurityConfigurerAdapter）暂时删除 TokenSecurityConfiguration，BrowserSecurityConfiguration能力（本就只是demo不建议直接使用） https://spring.io/blog/2022/02/21/spring-security-without-the-websecurityconfigureradapter/
spring-boot:2.7.16 -> 3.1.x
spring-cloud:2021.0.8 -> 2022.x

--- a/shoulder-build/shoulder-base/pom.xml
+++ b/shoulder-build/shoulder-base/pom.xml
@@ -33,7 +33,7 @@
         <module>shoulder-cluster</module>
         <module>shoulder-batch</module>
 
-        <module>shoulder-api-doc</module>
+        <!--        <module>shoulder-api-doc</module> temp_removal_for_not_support_spring_boot_3-->
         <module>shoulder-monitor</module>
     </modules>
 
