--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -46,8 +46,8 @@
         <!-- openApi(swagger)是行业标准，swagger 1.7 更名为 io.swagger.core.v3 但 swagger2 绝大多数开发者更熟悉而非 swagger3 -->
         <swagger3.version>2.2.16</swagger3.version>
 
-        <!-- 使用 springfox 解析文档 -->
-        <springfox.version>3.0.0</springfox.version>
+        <!-- 使用 springfox 解析文档 暂时移除，其核心类 WebMvcOpenApiTransformationFilter 还依赖 javax.servlet -->
+        <springfox.version>3.0.0_temp_removal_for_not_support_spring_boot_3</springfox.version>
         <!-- knife4j 前身是 swagger-bootstrap-ui，一个用于优化 swagger-ui 的项目，视觉效果更好 -->
         <knife4j.version>3.0.3</knife4j.version>
 
@@ -78,7 +78,7 @@
 
         <guava.version>32.1.2-jre</guava.version>
         <!-- google 最新 3.0.1版本（jdk1.7+）还用的javax.xxx 不支持 jakarta.xxx 暂时移除  https://findbugs.sourceforge.net/ -->
-        <!--        <findbugs-annotations.version>3.0.1</findbugs-annotations.version>-->
+        <findbugs-annotations.version>3.0.1_temp_removal_for_not_support_spring_boot_3</findbugs-annotations.version>
         <!-- inheritable threadLocal https://github.com/alibaba/transmittable-thread-local/releases -->
         <alibaba.transmittable.version>2.14.3</alibaba.transmittable.version>
 
@@ -525,11 +525,11 @@
             </dependency>
 
             <!-- @Nonnull / @Nullable 提示 -->
-            <!--            <dependency>-->
-            <!--                <groupId>com.google.code.findbugs</groupId>-->
-            <!--                <artifactId>annotations</artifactId>-->
-            <!--                <version>${findbugs-annotations.version}</version>-->
-            <!--            </dependency>-->
+            <dependency>
+                <groupId>com.google.code.findbugs</groupId>
+                <artifactId>annotations</artifactId>
+                <version>${findbugs-annotations.version}</version>
+            </dependency>
 
             <!-- java native access -->
             <dependency>
