--- a/shoulder-build/shoulder-base/shoulder-web/src/main/resources/shoulder/dictionary/dictionaryEnums.html.config
+++ b/shoulder-build/shoulder-base/shoulder-web/src/main/resources/shoulder/dictionary/dictionaryEnums.html.config
@@ -24,11 +24,11 @@
                                 querySingleDictionaryItems(dictionaryType);
                             });
                         } else {
-                            alert('listByType 查询失败：' + response.message);
+                            alert('allTypes 查询失败：' + response.message);
                         }
                     },
                     error: function (jqXHR, textStatus, errorThrown) {
-                        alert('listByType 请求失败：' + textStatus + ' - ' + errorThrown);
+                        alert('allTypes 请求失败：' + textStatus + ' - ' + errorThrown);
                     }
                 });
             }
@@ -92,7 +92,7 @@
             //querySingleDictionaryItems('AttitudeRelatedTypeEnum');
 
         });
-        var host = 'http://localhost:12345';
+        var host='CONFIG_PAGE_HOST';
     </script>
 </head> <body>
 <!-- 页面主体部分 -->
