--- a/shoulder-build/shoulder-base/shoulder-web/src/main/resources/shoulder/dictionary/dictionaryEnums.html.config
+++ b/shoulder-build/shoulder-base/shoulder-web/src/main/resources/shoulder/dictionary/dictionaryEnums.html.config
@@ -62,8 +62,8 @@
 
                 var row = $('<div class="row my-2 border-bottom">');
                 container.append(row);
-                var title_code = $('<div class="col-md-4 text-muted">').text('----CODE----');
-                var title_name = $('<div class="col-md-4">').text('----NAME----');
+                var title_code = $('<div class="col-md-4 text-info">').text('【CODE】');
+                var title_name = $('<div class="col-md-4 text-info">').text('【NAME】');
                 var title_op = $('<div class="col-md-3 text-end">');
 
                 row.append(title_code, title_name, title_op);
