--- a/shoulder-build/shoulder-base/shoulder-web/src/main/resources/shoulder/dictionary/dictionaryEnums.html.config
+++ b/shoulder-build/shoulder-base/shoulder-web/src/main/resources/shoulder/dictionary/dictionaryEnums.html.config
@@ -57,7 +57,7 @@
                 var container = $('#dictionary-items-container');
                 // container.empty();
 
-                var firstRow_dicName = $('<div class="col-md-3 my-4 border-bottom text-primary">').text(dictionaryName);
+                var firstRow_dicName = $('<div class="col-md-3 my-4 text-primary">').text(dictionaryName);
                 container.append(firstRow_dicName);
 
                 var row = $('<div class="row my-2 border-bottom">');
