--- a/shoulder-build/shoulder-base/shoulder-data-db/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-data-db/pom.xml
@@ -46,6 +46,12 @@
             <optional>true</optional>
         </dependency>
 
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.data</groupId>-->
+        <!--            <artifactId>spring-data-commons</artifactId>-->
+        <!--            <optional>true</optional>-->
+        <!--        </dependency>-->
+
         <dependency>
             <groupId>p6spy</groupId>
             <artifactId>p6spy</artifactId>
