--- a/shoulder-build/shoulder-base/shoulder-web/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-web/pom.xml
@@ -30,6 +30,21 @@
             <artifactId>shoulder-data-db</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <scope>optional</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <scope>optional</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <scope>optional</scope>
+        </dependency>
 
         <!-- 操作日志相关 -->
         <dependency>
