feat: security: 使用 spring security6 重新激活 browser、token 默认配置 autoconfiguration: 添加security 相关自动配置；自动配置 嵌入式 redis server 方便demo与测试

--- a/shoulder-build/shoulder-starters/shoulder-autoconfiguration/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-autoconfiguration/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>shoulder-cluster</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <!-- mock redis -->
+            <groupId>com.github.kstyrc</groupId>
+            <artifactId>embedded-redis</artifactId>
+            <optional>true</optional>
+        </dependency>
 
         <dependency>
             <groupId>cn.itlym</groupId>
