--- a/shoulder-build/shoulder-base/shoulder-web/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-web/pom.xml
@@ -33,17 +33,17 @@
         <dependency>
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
-            <scope>optional</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
-            <scope>optional</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-mongodb</artifactId>
-            <scope>optional</scope>
+            <optional>true</optional>
         </dependency>
 
         <!-- 操作日志相关 -->
