--- a/shoulder-build/shoulder-starters/shoulder-autoconfiguration/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-autoconfiguration/pom.xml
@@ -28,7 +28,7 @@
         </dependency>
         <dependency>
             <!-- mock redis -->
-            <groupId>com.github.kstyrc</groupId>
+            <groupId>com.github.codemonstur</groupId>
             <artifactId>embedded-redis</artifactId>
             <optional>true</optional>
         </dependency>
