--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -607,11 +607,16 @@
                 <artifactId>h2</artifactId>
                 <version>${h2.version}</version>
             </dependency>
+<!--            <dependency>-->
+<!--                &lt;!&ndash; mock redis https://github.com/kstyrc/embedded-redis/network/members &ndash;&gt;-->
+<!--                <groupId>com.github.kstyrc</groupId>-->
+<!--                <artifactId>embedded-redis</artifactId>-->
+<!--                <version>0.6</version>-->
+<!--            </dependency>-->
             <dependency>
-                <!-- mock redis -->
-                <groupId>com.github.kstyrc</groupId>
+                <groupId>com.github.codemonstur</groupId>
                 <artifactId>embedded-redis</artifactId>
-                <version>0.6</version>
+                <version>1.3.0</version>
             </dependency>
             <!-- mybatis-plus -->
             <dependency>
