--- a/shoulder-build/shoulder-base/shoulder-batch/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-batch/pom.xml
@@ -77,6 +77,12 @@
             <artifactId>shoulder-operation-log</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>cn.itlym</groupId>
+            <artifactId>shoulder-web</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!--<dependency>
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
