--- a/shoulder-build/shoulder-base/shoulder-batch/src/main/resources/message/en_US/shoulder_batch.properties
+++ b/shoulder-build/shoulder-base/shoulder-batch/src/main/resources/message/en_US/shoulder_batch.properties
@@ -1,12 +1,29 @@
+shoulder.batch.common.label.lineNum=Row No
+shoulder.batch.common.label.result=Result
+shoulder.batch.common.label.detail=Detail
+shoulder.batch.common.label.lineNum.special=row-{0}
 
-shoulder.batch.import.result.importUpdate=Update
-shoulder.batch.import.export.mode.csvName=ImportTemplate_{0}.csv
-shoulder.batch.import.export.mode.msg=Import template downloaded successfully
-shoulder.batch.import.page.show.success=Successful
-shoulder.batch.import.page.show.failed=Failed
-shoulder.batch.validate.repeat.db=Duplicate data ({0}) in the system
-shoulder.batch.upload.model.error=Incorrect data import template
-shoulder.batch.common.label.linNum=Row No.
-shoulder.batch.validate.repeat.all=Repeated data [{0}] in csv file
+shoulder.batch.import.template.download.csvName=import_template_{0}.csv
+shoulder.batch.import.template.download.msg=Download success!
+
+shoulder.batch.import.busy=Server Busy! Please try later.
+shoulder.batch.upload.template.invalid=Invalid Template!
+shoulder.batch.upload.limit.row=Import row must < 1000 !
+shoulder.batch.upload.limit.size=File size must < 5M\uFF01
+
+shoulder.batch.result.unknown=UNKNOWN
+shoulder.batch.result.validate.success=PASS
+shoulder.batch.result.validate.repeat.row=Already exists in system: ({0})
+shoulder.batch.result.validate.repeat.db=Repeat row in file [{0}]
+shoulder.batch.result.validate.failed=Validate Failed.
+shoulder.batch.import.detail=Total\uFF1A{0}\uFF0CSuccess\uFF1A{1}\uFF0CFailed\uFF1A{2}
+shoulder.batch.result.import.success=Import Success!
+shoulder.batch.result.import.failed=Import Failed.
+shoulder.batch.result.import.repeat.update=Update exists data.
+shoulder.batch.result.import.repeat.skip=Skip for already exists.
+shoulder.batch.result.import.invalid.skip=Skip for invalid.
+shoulder.batch.export.detail=export {0} rows.
+
 shoulder.batch.validate.repeat.digest.format={0}:{1}
-shoulder.batch.validate.repeat.digest.break=,
+shoulder.batch.validate.repeat.digest.break=|
+
