--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -25,9 +25,9 @@
         <!-- spring security oauth2 不再维护，不引入-->
         <spring-security-oauth2.version>2.5.2.RELEASE</spring-security-oauth2.version>
         <nimbus-jose-jwt.version>9.37.3</nimbus-jose-jwt.version>
-        <spring-oauth2-server.version>0.1.2</spring-oauth2-server.version>
+        <spring-oauth2-server.version>1.2.3</spring-oauth2-server.version>
 
-        <spring-boot.version>3.2.2</spring-boot.version>
+        <spring-boot.version>3.2.4</spring-boot.version>
         <!-- 由于Spring Boot提供了Maven BOM来管理依赖版本，因此您无需指定版本 -->
 
         <!-- 与 boot 版本对应关系 https://start.spring.io/actuator/info https://www.json.cn/  -->
@@ -426,7 +426,7 @@
                 <version>${nimbus-jose-jwt.version}</version>
             </dependency>
 
-            <!-- spring 新的 授权服务器（实验性） -->
+            <!-- spring 新的 授权服务器 -->
             <dependency>
                 <groupId>org.springframework.security.experimental</groupId>
                 <artifactId>spring-security-oauth2-authorization-server</artifactId>
