--- a/shoulder-build/shoulder-starters/shoulder-starter-web/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter-web/pom.xml
@@ -25,7 +25,10 @@
             <groupId>cn.itlym</groupId>
             <artifactId>shoulder-web</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations-jakarta</artifactId>
+        </dependency>
     </dependencies>
 
 
