--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -383,6 +383,11 @@
                 <artifactId>swagger-annotations</artifactId>
                 <version>${swagger3.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.swagger.core.v3</groupId>
+                <artifactId>swagger-annotations-jakarta</artifactId>
+                <version>${swagger3.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.springdoc</groupId>
