--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -103,6 +103,7 @@
         <!-- mybatis-plus 功能稳定性较差，且版本更新慢，bug修复可能长达数月，尽量只用其稳定功能，减少版本变更 -->
         <mybatis-plus.version>3.5.5</mybatis-plus.version>
         <freemarker.version>2.3.32</freemarker.version>
+        <velocity.version>2.3</velocity.version>
         <pagehelper.version>6.1.0</pagehelper.version>
         <pagehelper-starter.version>2.1.0</pagehelper-starter.version>
         <beecp.version>3.5.0</beecp.version>
@@ -651,6 +652,12 @@
                 <groupId>org.freemarker</groupId>
                 <artifactId>freemarker</artifactId>
                 <version>${freemarker.version}</version>
+            </dependency>
+            <!-- velocity 迁移改名过两次，使用者引入该jar需要注意版本（1.6改变；2.0改变）-->
+            <dependency>
+                <groupId>org.apache.velocity</groupId>
+                <artifactId>velocity-engine-core</artifactId>
+                <version>${velocity.version}</version>
             </dependency>
             <!-- mybatis的分页插件 -->
             <dependency>
